# tatarskie_pesenki

./: .gitignore  CMakeLists.txt  README.md  build.bat
cmake/: GeneratePolymorphism.cmake
include/: ScreenMelting.h  TurnOffMonitor.h  anti_analysis.hpp  behavioral_evasion.hpp  code_obfuscation.hpp  junk_obfuscation.hpp  polymorphism.hpp  security.h  stdafx.h  string_encryption.hpp
src/: ScreenMelting.cpp  TurnOffMonitor.cpp  app.rc  main.cpp  security.cpp
